--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,11 @@ main {
   height: 160px;
   border-radius: 5%;
   box-sizing: border-box;
+  justify-content: space-between;
+}
+.onemeal:hover {
+  box-shadow: 0 22px 24px 0 rgba(46, 51, 51, 0.07);
+  cursor: pointer;
 }
 .AllText {
   margin-right: 8px;
@@ -138,6 +143,7 @@ h3 {
 
 .moyen {
   font-size: 1.1rem;
+  color: #868a8a;
 }
 .petit {
   font-size: 0.8rem;
