--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,7 @@ h3 {
   cursor: pointer;
 }
 .basket {
-  padding: 0 16px 60px 16px;
+  padding: 0 10px 60px 10px;
   text-align: center;
   color: #868a8a;
 }
@@ -231,12 +231,16 @@ h3 {
 }
 .title {
   margin-left: 6px;
+  text-align: left;
 }
 
 .right {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+.left {
+  width: 20%;
 }
 
 .icon {
@@ -248,8 +252,6 @@ h3 {
   display: flex;
   justify-content: space-between;
   font-size: 0.9rem;
-  margin-left: 8px;
-  margin-top: 16px;
 }
 
 .deliverfee {
@@ -261,7 +263,12 @@ h3 {
 }
 
 .calcul {
-  margin-bottom: 16px;
   border-bottom: solid 1px lightgray;
   padding-bottom: 16px;
+  margin: 16px 12px 0 10px;
+}
+
+.total {
+  padding-bottom: 16px;
+  margin: 16px 12px 0 10px;
 }
